Board creation is now working. To add moves.