@@ -15,6 +15,12 @@ public class Game {
     private List<Move> moveList;
     private GameStatus status;
 
+    public static void main(String[] args) {
+        Player player1 = new Player(new Piece("1"));
+        Player player2 = new Player(new Piece("2"));
+        Game game = Game.startGame(100, GameDifficulty.HARD, player1, player2);
+    }
+
     public static Game startGame(int boardSize, GameDifficulty difficulty, Player... players) {
         Game newGame = Game.builder()
                 .board(Board.createNewBoard(boardSize, difficulty))
@@ -24,11 +30,22 @@ public class Game {
                 .status(GameStatus.INITIATED)
                 .build();
 
-        newGame.getBoard()
-                .getStart()
-                .placePiecesOnSquare(Arrays.stream(players)
-                        .map(Player :: getPiece)
-                        .collect(Collectors.toList()));
+        List<Piece> pieces = Arrays.stream(players)
+                .map(Player :: getPiece)
+                .toList();
+
+        newGame.getBoard().getStart().setPieces(pieces);
+
+        for(Square sq : newGame.getBoard().getSquares()) {
+            if(sq.getTeleporter() != null) {
+                int startingSquare = sq.getTeleporter().getStartingSquare();
+                int endingSquare = sq.getTeleporter().getEndingSquare();
+
+                if(startingSquare == 1 || endingSquare == 100) {
+                    System.out.println("WRRRRRRRONG");
+                }
+            }
+        }
 
         return newGame;
     }
